--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "@mantine/carousel": "^7.6.1",
     "@mantine/core": "^7.6.1",
     "@mantine/hooks": "^7.6.1",
     "@tabler/icons-react": "^2.47.0",
+    "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^8.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -28,6 +31,7 @@
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
